--- a/src/style/_global.scss
+++ b/src/style/_global.scss
@@ -6,9 +6,6 @@ body {
     color: black;
 }
 
-main {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    color: rgba(0, 255, 242, 0.986);
-}
+/* main {
+    
+} */
