--- a/src/style/_global.scss
+++ b/src/style/_global.scss
@@ -1,5 +1,6 @@
-$purple:#6f42c1;
-$pink:#d63384;
+$purple-dark:#9926f0;
+$purple-light:#bb6ef5;
+$pink:#d122e3;
 
 $white:#fff;
 $gray-100:#f8f9fa;
@@ -13,7 +14,7 @@ $gray-800:#343a40;
 $gray-900:#212529;
 $black:#000;
 
-$primary: $purple;
+$primary: $purple-dark;
 $secondary: $pink;
 
 @import '../../node_modules/bootstrap/scss/bootstrap.scss';
